--- a/index.qmd
+++ b/index.qmd
@@ -10,4 +10,4 @@ about:
       #href: 
 ---
 
-I am Nduka Boika, a Ph.D. student with a deep interest in research methodology, educational statistics, and educational measurement. I am currently pursuing my doctorate at the University of North Texas in the Department of Educational Psychology, specializing in Research Methodology, Measurement, and Statistics. My academic journey is guided by my advisor, Dr. James Uanhoro.
+Hello there! I am Nduka Boika - a Ph.D. student in Educational Psychology, specializing in Research Methodology, Measurement, and Statistics at the University of North Texas. My academic journey is guided by Dr. James Uanhoro (my advisor). As for my research interest, i have just developed an interest in Meta-analytic structural equation modeling.
